--- a/Backend/backend/.gitignore
+++ b/Backend/backend/.gitignore
@@ -36,6 +36,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
+dist/
 .env
 .env.development.local
 .env.test.local
@@ -43,6 +44,7 @@ lerna-debug.log*
 .env.local
 
 # temp directory
+node_modules/
 .temp
 .tmp
 
